sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnknownTL/options.traci
--penetration 0.7 --remote-port 8863 --no-step-log --no-duration-log --net-file=net.net.xml -a input_routes.rou.xml -b 0 -e 1000
endsumo
TraCITestClient.exe -def testclient.prog -p 8863 -h localhost -o testclient_out.txt
